Correct setup for mobile breakpoints. Update fonts and spacing across site.

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -13,3 +13,11 @@
     }
   }
 }
+
+@media only screen and (max-width: $small-width) {
+  .contact {
+    li {
+      font-size: 22px;
+    }
+  }
+}
