--- a/_sass/portfolio.scss
+++ b/_sass/portfolio.scss
@@ -54,3 +54,17 @@
     }
   }
 }
+
+
+@media only screen and (max-width: $small-width) {
+  .portfolio-index-item {
+    img {
+      max-width: 100%;
+    }
+
+    h3 {
+      font-size: 20px;
+      line-height: 28px;
+    }
+  }
+}
