--- a/_sass/structure.scss
+++ b/_sass/structure.scss
@@ -49,6 +49,7 @@ nav {
 
     h1 {
       margin-bottom: 10px;
+      font-size: 26px;
     }
   }
 }
